--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,34 @@
-asgiref==3.7.2
-certifi==2023.11.17
-crispy-bootstrap5==2023.10
-distlib==0.3.7
-dj-database-url==2.1.0
-Django==4.2.7
-django-crispy-forms==2.1
-django-environ==0.11.2
-EasyProcess==1.1
-entrypoint2==1.1
-filelock==3.13.1
-MouseInfo==0.1.3
-mss==9.0.1
-mysql-connector-python==8.2.0
-numpy==1.26.0
-opencv-contrib-python==4.8.0.76
-Pillow==10.0.1
-pipenv==2023.11.15
-platformdirs==4.0.0
-protobuf==4.21.12
-psycopg2==2.9.9
-psycopg2-binary==2.9.9
-PyAutoGUI==0.9.54
-PyGetWindow==0.0.9
-PyMsgBox==1.0.9
-pyperclip==1.8.2
-PyRect==0.2.0
-pyscreenshot==3.1
-PyScreeze==0.1.29
-pytweening==1.0.7
-sqlparse==0.4.4
-typing_extensions==4.9.0
-tzdata==2023.3
-virtualenv==20.24.7
+asgiref
+certifi
+crispy-bootstrap5
+distlib
+dj-database-url
+Django
+django-crispy-forms
+django-environ
+EasyProcess
+entrypoint2
+filelock
+MouseInfo
+mss
+mysql-connector-python
+numpy
+opencv-contrib-python
+Pillow
+pipenv
+platformdirs
+protobuf
+psycopg2
+psycopg2-binary
+PyAutoGUI
+PyGetWindow
+PyMsgBox
+pyperclip
+PyRect
+pyscreenshot
+PyScreeze
+pytweening
+sqlparse
+typing_extensions
+tzdata
+virtualenv
